--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "appName": {
+    "ng6-quiz": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,23 +13,23 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/appName",
+            "outputPath": "dist/ng6-quiz",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+              "src/data",
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/popper.js/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
             ]
           },
           "configurations": {
@@ -55,18 +55,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "appName:build"
+            "browserTarget": "ng6-quiz:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "appName:build:production"
+              "browserTarget": "ng6-quiz:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "appName:build"
+            "browserTarget": "ng6-quiz:build"
           }
         },
         "test": {
@@ -77,7 +77,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "styles.css"
             ],
             "scripts": [],
             "assets": [
@@ -100,7 +100,7 @@
         }
       }
     },
-    "appName-e2e": {
+    "ng6-quiz-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -108,12 +108,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "appName:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "appName:serve:production"
-            }
+            "devServerTarget": "ng6-quiz:serve"
           }
         },
         "lint": {
@@ -128,5 +123,5 @@
       }
     }
   },
-  "defaultProject": "appName"
+  "defaultProject": "ng6-quiz"
 }
