--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "^6.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
+    "@angular/core": "^6.0.9",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.0",
     "@angular/platform-browser": "^6.0.0",
@@ -23,6 +23,7 @@
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
